--- a/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
+++ b/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
@@ -269,13 +269,13 @@ I put these steps into a few (unpolished) functions found at [this gist](https:/
 devtools::source_gist("https://gist.github.com/brshallo/f92a5820030e21cfed8f823a6e1d56e1")
 ```
 
-`operations_combinations()` takes in your dataframe, the set of numeric columns to create pairwise combinations from, and a list of functions^[Must have two vectors as input, but do not need to be infix functions.] to apply.
+`mutate_pairwise()` takes in your dataframe, the set of numeric columns to create pairwise combinations from, and a list of functions^[Must have two vectors as input, but do not need to be infix functions.] to apply.
 
 # Example creating & evaluating features
 
-Let's use the new `operations_combinations()` function to create new columns for the differences and quotients between all pairwise combinations of our variables of interest.
+Let's use the new `mutate_pairwise()` function to create new columns for the differences and quotients between all pairwise combinations of our variables of interest.
 ```{r}
-ames_data_features_example <- operations_combinations(
+ames_data_features_example <- mutate_pairwise(
   df = mutate_if(ames, is.numeric, as.double),
   one_of(ames_cols),
   funs = list("/", "-"),
@@ -432,6 +432,10 @@ A few tweets as documentation of thinking.
 *Tweet about `widyr`:*
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Will add `widyr` to my set of tools for tidy pairwise operations: <a href="https://t.co/NSxNC3nehK">https://t.co/NSxNC3nehK</a> !<br><br>Seems to overlap some w/ tidymodels, eg `corrr`📦 (<a href="https://twitter.com/thisisdaryn?ref_src=twsrc%5Etfw">@thisisdaryn</a> ) or could imagine widely_kmeans() as a `recipe`/`embed` step...<a href="https://twitter.com/drob?ref_src=twsrc%5Etfw">@drob</a> any tips on when/how you use these in combination? <a href="https://t.co/dAsJtNW7Vo">https://t.co/dAsJtNW7Vo</a></p>&mdash; Bryan Shalloway (@brshallo) <a href="https://twitter.com/brshallo/status/1313966803488583686?ref_src=twsrc%5Etfw">October 7, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+*Tweet with more efficient approach (for case when just combining multiple columns and returning output of equal number of rows):*
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">How you can use `dplyr::mutate()` to return a dataframe consisting of all combinations of arbitrary pairwise operations across a selection of columns: <a href="https://t.co/RxwtbmWqap">https://t.co/RxwtbmWqap</a> <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://twitter.com/hashtag/tidyverse?src=hash&amp;ref_src=twsrc%5Etfw">#tidyverse</a> ... <a href="https://t.co/UpJw0pGPUd">pic.twitter.com/UpJw0pGPUd</a></p>&mdash; Bryan Shalloway (@brshallo) <a href="https://twitter.com/brshallo/status/1316851879658356736?ref_src=twsrc%5Etfw">October 15, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 ## Session info
 
