--- a/content/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win.Rmd
+++ b/content/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win.Rmd
@@ -1,65 +1,59 @@
 ---
-title: Idea For Casino Games Where The Player Almost Always Win
+title: Casino Games Where the House Almost Always Loses... but Still Wins
 author: Bryan Shalloway
 date: '2020-10-29'
-slug: idea-for-casino-games-where-the-player-almost-always-win
 categories:
-  - math
   - game
+  - math
 tags:
-  - rational
   - psychology
+  - rational
+slug: idea-for-casino-games-where-the-player-almost-always-win
+output:
+  blogdown::html_page:
+    toc: no
 ---
 
-I have been coleading an internal study group going on Pricing Strategy. We just finished week 4 of a Coursera course [Customer Value in Pricing Strategy](https://www.coursera.org/learn/uva-darden-bcg-pricing-strategy-customer-value/home/week/4) devoted entirely to the various conditions under which people behave 'irrationally'^[I am also in the middle of reading Khaneman's seminal book "Thinking Fast and Slow" which is largely devoted to the topic.] and how/when to use these conditions^[AKA tricks...] to demand a higher price on your product. While going through the materials I had an idea for a new casino game.
+I have been coleading an internal study group on Pricing Strategy. We just finished week four of [Customer Value in Pricing Strategy](https://www.coursera.org/learn/uva-darden-bcg-pricing-strategy-customer-value/home/week/4). The material in this section is devoted almost entirely to the various conditions under which people behave 'irrationally'^[I am also in the middle of reading Khaneman's seminal book "Thinking Fast and Slow" which is largely devoted to the topic.] and how / when a firm can manipulate the psychology of customers so as to demand a higher price on their products. The material is rife with ethical dilemmas, setting these aside, the materials gave me an idea for a new spin on casino games.
 
-There are a few psychological phenomena from the course that are important primers:
+There are a few psychological phenomena from the course that are important primers (all images below are screenshotted from the course materials).
 
 I. People tend to be *risk seeking* when facing **losses** but *risk averse* when facing **gains**. 
 
-The example they give in the course is that faced with the scenario below (where each option has the same expected value), people will tend to go for the sure thing to gain the $50.
+An example in the course is that faced with the scenario below, people will tend to go for the sure thing to gain $50 rather than the chance at gaining \$100 (even though each option has the same expected value).
 
-```{r}
-# Image of risk seeking
-```
+![](/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win_files/gain-example.PNG)
 
 However in the case of facing a loss, they will tend to prefer testing their chances and taking the riskier option of a 50% chance of losing $100.
 
-```{r}
-# image of risk avoiding
-```
+![](/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win_files/loss-example.PNG)
 
 Another psychological phenomena described is:
 
-II. People tend to prefer *disaggregated* gains but *aggregated* losses
+II. People tend to prefer *disaggregated* **gains** but *aggregated* **losses**
 
 People prefer multiple small good things happening to them over just a single good thing occurring (even if the total value of events is equal). For example, people will prefer winning two small scratch cards over winning a single large scratch card:
 
-```{r}
-# example scratch card
-```
+![](/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win_files/aggregated-gains.PNG)
 
-However people prefer taking bad events in aggregated forms. For example they prefer receiving one large bill over receiving multiple smaller bills:
+However people prefer taking losses in aggregated forms. As described in the course, they prefer receiving one large bill over receiving multiple smaller bills:
 
-```{r}
-# example bills
-```
+![](/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win_files/aggregated-loss.PNG)
 
-Even though the value of these events is equal^[Please ignore the particularities in the examples and focus on what they are designed to illustrate...].
+Even though the value of these events is equal^[Ignore the particularities in the examples and focus on what they are designed to illustrate...].
 
 # Implications For Gambling
 
-Casinos are master psychological manipulators. However many lotteries, slots, and other games run counter to these particular phenomena. They offer repeated gauranteed initial losses (the quarter you put into the machine, the scratch ticket you buy from the counter, etc.) for the chance at a large payoff (winning the jackpot)^[These games of course play at other psychological tricks...]. 
+Many lotteries, slots, and other forms of gambling run counter to these particular phenomena. They offer repeated gauranteed initial losses (the quarter you put into the machine, the scratch ticket you buy from the counter, etc.) for the chance at a large payoff (winning the jackpot)^[Casinos are master psychological manipulators. These games of course play at other psychological tricks... I imagine they've considered my ideas below and decided against using them for one reason or another.]. 
 
 I thought an interesting set-up for a game would be one that flipped this and made the player *very* likely to win a small amount each time they played but that always carried the risk of a single large loss^[Picture a group of friends playing credit card roullette at the end of the night.].
 
-As an example, imagine a roullette-like wheel numbered from 1 to 30. You are instructed to pick a number and as long as you *don't* land on the selected number, you win \$5 but if you *do* land on it you lose \$150^[or something along those lines for whatever size of bet.]. This particular game and bet would yield the casino an expected value of a little under 17 cents^[((5 * 29) - 150 )/ 30) you could of course edit the odds to set things appropriately]. It also yields the player an expected 30 wins in a row^[See [thread](https://math.stackexchange.com/questions/1119872/on-average-how-many-times-must-i-roll-a-dice-until-i-get-a-6#:~:text=About%2014%20times%20it%20will,100%20and%20get%20%E2%89%886.) for explanation.]. The advert for the game might focus on the idea of "Tempting Fate."[^1]
+As an example, imagine a roullette-like wheel numbered from 1 to 30. You are instructed to pick a number. As long as you *don't* land on that number you will win \$5. If you *do* land on it you will lose \$150^[or something along those lines for whatever size of bet.]. This particular game and bet would yield the casino an expected value of a little under 17 cents^[((5 * 29) - 150 )/ 30)]. It also yields the player an expected 30 wins in a row^[See [thread](https://math.stackexchange.com/questions/1119872/on-average-how-many-times-must-i-roll-a-dice-until-i-get-a-6#:~:text=About%2014%20times%20it%20will,100%20and%20get%20%E2%89%886.) for explanation.] (this may be a little too high^[you could of course edit the odds to set things appropriately]). The advert for the game might focus on the idea of "Tempting Fate[^1]."
 
 [^1]: Many casino games could be redesigned in this manner -- where you are likely to win but always face the risk of a large loss. You might picture a room in the casino that had an 'Upside Down' style feel where all the slots and similar games there were reconstructed accordingly.
     
     ![](https://www.thesun.co.uk/wp-content/uploads/2017/11/tmp_6e95hn_8581834aa802f9b6_wv_publicity_post_launch_still_10-0000011.jpg)
     
-You might course mix and match the ideas of a 'big loss' and a 'big win'. Carrying on from the previous example the board (numbered 1:30) could be set-up where the player picks a big win spot (\$150 gain), two big losing spots (\$150 loss for either), and the rest all result in small wins (\$5), the expected value for the casino is now $0.50.
+You might mix and match the ideas of a 'big loss' and a 'big win'. Carrying on from the previous example the board (numbered 1:30) could be set-up where the player picks a big win spot (\$150 gain), two big losing spots (\$150 loss for either), and the rest all result in small wins (\$5), the expected value for the casino is now $0.50.
 
-There are a variety of forms this game could take (it doesn't have to be a roullette-like wheel) the novel phenomena is to focus on ensuring players get repeated small wins while having them pay their losses in one-off large chunks.
-
+There are a variety of forms this game could take (it doesn't have to be a roullette-like wheel) the novel phenomena is to focus on ensuring players get repeated small wins while having them pay their losses in one-off large chunks (rather than small incremental payments).
