--- a/content/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win.Rmd
+++ b/content/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Casino Games Where the House Almost Always Loses... but Still Wins
 author: Bryan Shalloway
-date: '2020-10-29'
+date: '2020-10-28'
 categories:
   - game
   - math
@@ -14,46 +14,47 @@ output:
     toc: no
 ---
 
+*In this post, I will describe an example of a gambling game that produces many small wins for the player and occassional large wins for the house. Such a game takes advantage of psychological biases of individuals to 1. prefer gains to be disaggregated and losses to be aggregated and 2. greater risk seeking behavior when it comes to losses compared to gains.*
+
 I have been coleading an internal study group on Pricing Strategy. We just finished week four of [Customer Value in Pricing Strategy](https://www.coursera.org/learn/uva-darden-bcg-pricing-strategy-customer-value/home/week/4). The material in this section is devoted almost entirely to the various conditions under which people behave 'irrationally'^[I am also in the middle of reading Khaneman's seminal book "Thinking Fast and Slow" which is largely devoted to the topic.] and how / when a firm can manipulate the psychology of customers so as to demand a higher price on their products. The material is rife with ethical dilemmas, setting these aside, the materials gave me an idea for a new spin on casino games.
 
-There are a few psychological phenomena from the course that are important primers (all images below are screenshotted from the course materials).
+There are a few psychological phenomena from the course that are important primers.
 
 I. People tend to be *risk seeking* when facing **losses** but *risk averse* when facing **gains**. 
 
 An example in the course is that faced with the scenario below, people will tend to go for the sure thing to gain $50 rather than the chance at gaining \$100 (even though each option has the same expected value).
 
 ![](/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win_files/gain-example.PNG)
-
+>*(all images in this post are screenshotted from UVA / BCG's [course materials](https://www.coursera.org/learn/uva-darden-bcg-pricing-strategy-customer-value/home/week/4))*
+ 
 However in the case of facing a loss, they will tend to prefer testing their chances and taking the riskier option of a 50% chance of losing $100.
 
 ![](/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win_files/loss-example.PNG)
 
-Another psychological phenomena described is:
-
 II. People tend to prefer *disaggregated* **gains** but *aggregated* **losses**
 
-People prefer multiple small good things happening to them over just a single good thing occurring (even if the total value of events is equal). For example, people will prefer winning two small scratch cards over winning a single large scratch card:
+People prefer multiple small good things happening to them over a single (larger) good thing occurring (even if the total value of events is equal). For example, people will prefer winning two small scratch cards over winning a single large scratch card:
 
 ![](/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win_files/aggregated-gains.PNG)
 
-However people prefer taking losses in aggregated forms. As described in the course, they prefer receiving one large bill over receiving multiple smaller bills:
+However people prefer taking losses in aggregated forms. As described in the course, they usually prefer receiving one large bill over multiple smaller bills:
 
 ![](/post/2020-10-29-idea-for-casino-games-where-the-player-almost-always-win_files/aggregated-loss.PNG)
 
-Even though the value of these events is equal^[Ignore the particularities in the examples and focus on what they are designed to illustrate...].
+(Even though the value of these events is equal^[Ignore the particularities in the examples and focus on what they are designed to illustrate...].)
 
 # Implications For Gambling
 
-Many lotteries, slots, and other forms of gambling run counter to these particular phenomena. They offer repeated gauranteed initial losses (the quarter you put into the machine, the scratch ticket you buy from the counter, etc.) for the chance at a large payoff (winning the jackpot)^[Casinos are master psychological manipulators. These games of course play at other psychological tricks... I imagine they've considered my ideas below and decided against using them for one reason or another.]. 
+Many lotteries, slots, and other forms of gambling run counter to these particular psychological phenomena^[Casinos are master psychological manipulators. These games of course play at other psychological tricks... I imagine they've considered my ideas below and decided against using them for one reason or another.]. They offer repeated gauranteed initial losses (the quarter you put into the machine, the scratch ticket you buy from the counter, etc.) for the chance at a large payoff (winning the jackpot). 
 
-I thought an interesting set-up for a game would be one that flipped this and made the player *very* likely to win a small amount each time they played but that always carried the risk of a single large loss^[Picture a group of friends playing credit card roullette at the end of the night.].
+I thought an interesting set-up for a game would be one that flipped this and made the player very likely to win a small amount each time they played but that always carried the risk of a single large loss^[Picture a group of friends playing credit card roullette at the end of the night.].
 
-As an example, imagine a roullette-like wheel numbered from 1 to 30. You are instructed to pick a number. As long as you *don't* land on that number you will win \$5. If you *do* land on it you will lose \$150^[or something along those lines for whatever size of bet.]. This particular game and bet would yield the casino an expected value of a little under 17 cents^[((5 * 29) - 150 )/ 30)]. It also yields the player an expected 30 wins in a row^[See [thread](https://math.stackexchange.com/questions/1119872/on-average-how-many-times-must-i-roll-a-dice-until-i-get-a-6#:~:text=About%2014%20times%20it%20will,100%20and%20get%20%E2%89%886.) for explanation.] (this may be a little too high^[you could of course edit the odds to set things appropriately]). The advert for the game might focus on the idea of "Tempting Fate[^1]."
+As an example, imagine a roullette-like wheel numbered from 1 to 30. You are instructed to pick a number. As long as you *don't* land on that number you will win \$5. If you *do* land on it you will lose \$150 (or something along those lines for whatever size of bet). This particular game and bet would yield the casino an expected value of a little under \$0.17 cents^[((5 * 29) - 150 )/ 30)]. It also yields the player an expected 30 wins in a row^[See [thread](https://math.stackexchange.com/questions/1119872/on-average-how-many-times-must-i-roll-a-dice-until-i-get-a-6#:~:text=About%2014%20times%20it%20will,100%20and%20get%20%E2%89%886.) for explanation.] (this may be a little too high^[you could of course edit the odds to set things appropriately]). The advert for the game might focus on the idea of "Tempting Fate[^1]."
 
 [^1]: Many casino games could be redesigned in this manner -- where you are likely to win but always face the risk of a large loss. You might picture a room in the casino that had an 'Upside Down' style feel where all the slots and similar games there were reconstructed accordingly.
     
     ![](https://www.thesun.co.uk/wp-content/uploads/2017/11/tmp_6e95hn_8581834aa802f9b6_wv_publicity_post_launch_still_10-0000011.jpg)
     
-You might mix and match the ideas of a 'big loss' and a 'big win'. Carrying on from the previous example the board (numbered 1:30) could be set-up where the player picks a big win spot (\$150 gain), two big losing spots (\$150 loss for either), and the rest all result in small wins (\$5), the expected value for the casino is now $0.50.
+You might have a mix of 'big losses' and a 'big wins'. Carrying on from the previous example the wheel (numbered 1:30) could be set-up where the player picks a big win spot (\$150 gain), two big losing spots (\$150 loss for either), and the rest all result in small wins (\$5), the expected value for the casino on this set-up is now $0.50.
 
 There are a variety of forms this game could take (it doesn't have to be a roullette-like wheel) the novel phenomena is to focus on ensuring players get repeated small wins while having them pay their losses in one-off large chunks (rather than small incremental payments).
